--- a/.config/swaylock/config
+++ b/.config/swaylock/config
@@ -10,7 +10,7 @@ indicator
 indicator-radius=200
 indicator-thickness=20
 datestr=%a, %B %e
-timestr=%I:%M %p
+timestr=%H:%M %p
 grace-no-mouse
 grace-no-touch
 
@@ -23,7 +23,7 @@ inside-clear-color=00000000
 inside-caps-lock-color=00000000
 inside-ver-color=00000000
 inside-wrong-color=00000000
-key-hl-color=a6e3a1
+key-hl-color=00000080
 layout-bg-color=00000000
 layout-border-color=00000000
 layout-text-color=cdd6f4
@@ -32,14 +32,14 @@ line-clear-color=00000000
 line-caps-lock-color=00000000
 line-ver-color=00000000
 line-wrong-color=00000000
-ring-color=b4befe
+ring-color=cdd6f4
 ring-clear-color=f5e0dc
 ring-caps-lock-color=fab387
-ring-ver-color=89b4fa
+ring-ver-color=cdd6f4
 ring-wrong-color=eba0ac
 separator-color=00000000
 text-color=cdd6f4
 text-clear-color=f5e0dc
 text-caps-lock-color=fab387
-text-ver-color=89b4fa
+text-ver-color=cdd6f4
 text-wrong-color=eba0ac
