#12 update setup.sh, update .config

--- a/.config/compfy/compfy.conf
+++ b/.config/compfy/compfy.conf
@@ -1,6 +1,6 @@
 # Enables patches for specific window managers.
 # Currently patched: "awesome", "dwm", "herb"
-wm-support = "awesome";
+wm-support = "none";
 
 #################################
 #         ANIMATIONS            #
@@ -37,15 +37,15 @@ animation-for-unmap-window = "zoom";
 
 # Exclude certain windows from having a open animation.
 
-# animation-open-exclude = [
+#animation-open-exclude = [
 #   "class_g = 'Dunst'"
-# ];
+#];
 
 # Exclude certain windows from having a closing animation.
 
-# animation-unmap-exclude = [
-#   "class_g = 'Dunst'"
-# ];
+animation-unmap-exclude = [
+   "class_g = 'Dunst'"
+];
 
 #################################
 #           Corners             #
