--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -31,7 +31,7 @@ alert = #B2535B
 
 ;------------;
 
-override-redirect = true
+;override-redirect = true
 
 width = 20%
 
@@ -165,7 +165,7 @@ cursor-scroll = ns-resize
 
 ;------------;
 
-override-redirect = true
+;override-redirect = true
 
 width = 20%
 
@@ -1014,12 +1014,12 @@ interval = 3.0
 format-connected-background = ${colors.background}
 format-connected-foreground = ${colors.foreground}
 format-connected-padding = 1
-format-connected = %{A1:~/.config/polybar/rofi-network-manager/rofi-network-manager.sh:}<label-connected>%{A}
+format-connected = %{A1:~/.config/scripts/rofi-network-manager/rofi-network-manager.sh:}<label-connected>%{A}
 label-connected = ""
 format-disconnected-background = ${colors.background}
 format-disconnected-foreground = ${colors.foreground-alt}
 format-disconnected-padding = 1
-format-disconnected = %{A1:~/.config/polybar/rofi-network-manager/rofi-network-manager.sh:}<label-disconnected>%{A}
+format-disconnected = %{A1:~/.config/scripts/rofi-network-manager/rofi-network-manager.sh:}<label-disconnected>%{A}
 label-disconnected = "󰌺"
 
 [module/powermenu]
