--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -117,17 +117,17 @@ fixed-center = true
 
 padding-left = 3
 
-padding-right = 2
+padding-right = 3
 
-module-margin-left = 1
+module-margin-left = 0
 
-module-margin-right = 1
+module-margin-right = 0
 
 modules-left = powermenu 
 
 modules-center = xwindow
 
-modules-right =
+modules-right = updates
 
 tray-position = hidden
 
@@ -368,12 +368,11 @@ cursor-click = pointer
 type = internal/xwindow
 
 format-foreground = ${colors.primary}
+format-padding = 0
 
 label = %title%
 
-label-maxlen = 65
-
-tail = true
+label-maxlen = 55
 
 label-empty = hello
 
@@ -396,6 +395,21 @@ layout-icon-1 = us;EN
 
 label-indicator-background = ${colors.secondary}
 label-indicator-underline = ${colors.secondary}
+
+
+[module/updates]
+
+type = custom/script
+
+exec = xbps-install -nuM | wc -l
+
+interval = 90
+
+format-foreground = ${colors.primary}
+
+label = %output% 
+
+click-left = alacritty -e bash -c "echo 'Enter password for update' && sudo xbps-install -Su"
 
 
 [module/filesystem]
@@ -558,8 +572,8 @@ type = custom/text
 content = 
 content-padding = 1
 
-click-left = rofi -no-config -no-lazy-grab -show drun -modi drun -theme ~/.config/rofi/theme.rasi
-click-right = rofi -no-config -no-lazy-grab -show drun -modi drun -theme ~/.config/rofi/theme.rasi
+click-left = rofi -no-lazy-grab -show drun -modi drun -theme ~/.config/rofi/theme.rasi -show -location 1 -xoffset 10 -yoffset 40
+click-right = rofi -no-lazy-grab -show drun -modi drun -theme ~/.config/rofi/theme.rasi -show -location 1 -xoffset 10 -yoffset 40
 
 
 [module/network]
