#15 folder management, some script/config file fixes

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -202,7 +202,7 @@ map F     set freeze_files!
 map <C-r> reset
 map <C-l> redraw_window
 map <C-c> abort
-map <C-x> shell -dsp notepadqq %f
+map <C-x> shell -dsp geany %f
 map <esc> change_mode normal
 map ~ set viewmode!
 
