--- a/settings/dm/lightdm-gtk-greeter.conf
+++ b/settings/dm/lightdm-gtk-greeter.conf
@@ -12,3 +12,5 @@ hide-user-image = true
 screensaver-timeout = 0
 indicators = ~spacer;~clock;~spacer;~session;~power
 
+[Seat:*]
+greeter-setup-script=/usr/bin/numlockx on
