#25 added scripts/screencast

--- a/settings/user/.nanorc
+++ b/settings/user/.nanorc
@@ -10,10 +10,9 @@
 
 
 #set saveonexit
-
-set linenumbers
-
 #set showcursor
+set linenumbers
+set tabsize 4
 
 
 #  $██████╗$██████╗$██╗$$$$$$██████╗$██████╗$███████╗
