--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -235,7 +235,7 @@ module-margin-right = 1
 
 modules-left = 
 
-modules-center = xworkspaces network pulseaudio xkeyboard date
+modules-center = screenrecord xworkspaces network pulseaudio xkeyboard date
 
 modules-right = 
 
@@ -362,6 +362,17 @@ cursor-click = pointer
 #  ╚═╝$$$$$╚═╝$╚═════╝$╚═════╝$$╚═════╝$╚══════╝╚══════╝╚══════╝
 #  $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
 
+[module/screenrecord]
+
+type = custom/script
+
+exec = bash ~/.config/scripts/screencast/check_record_status.sh
+
+click-left =  bash ~/.config/scripts/screencast/record.sh
+
+label = %output%
+
+interval = 1
 
 [module/xwindow]
 
