#28 fix lightdm.conf

--- a/settings/dm/lightdm.conf
+++ b/settings/dm/lightdm.conf
@@ -85,6 +85,7 @@
 #
 [Seat:*]
 greeter-setup-script=/usr/bin/numlockx on
+session-wrapper=/etc/lightdm/Xsession
 #type=local
 #pam-service=lightdm
 #pam-autologin-service=lightdm-autologin
