#30 update polybar's date module, remove screencast's notification

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -1,5 +1,19 @@
 
 
+#  $██████╗$██╗$$$$$$██████╗$██████╗$$█████╗$██╗$$$$$
+#  ██╔════╝$██║$$$$$██╔═══██╗██╔══██╗██╔══██╗██║$$$$$
+#  ██║$$███╗██║$$$$$██║$$$██║██████╔╝███████║██║$$$$$
+#  ██║$$$██║██║$$$$$██║$$$██║██╔══██╗██╔══██║██║$$$$$
+#  ╚██████╔╝███████╗╚██████╔╝██████╔╝██║$$██║███████╗
+#  $╚═════╝$╚══════╝$╚═════╝$╚═════╝$╚═╝$$╚═╝╚══════╝
+#  $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
+
+
+[global]
+
+radius = 10
+
+
 #  $██████╗$██████╗$██╗$$$$$$██████╗$██████╗$███████╗
 #  ██╔════╝██╔═══██╗██║$$$$$██╔═══██╗██╔══██╗██╔════╝
 #  ██║$$$$$██║$$$██║██║$$$$$██║$$$██║██████╔╝███████╗
@@ -111,7 +125,7 @@ alert = ${colors.alert}
 #  $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
 
 
-radius = 10
+radius = ${global.radius}
 
 fixed-center = true
 
@@ -221,7 +235,7 @@ alert = ${colors.alert}
 #  $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
 
 
-radius = 10
+radius = ${global.radius}
 
 fixed-center = true
 
@@ -331,7 +345,7 @@ alert = ${colors.alert}
 #  $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
 
 
-radius = 10
+radius = ${global.radius}
 
 fixed-center = true
 
@@ -368,7 +382,8 @@ type = custom/script
 
 exec = bash ~/.config/scripts/screencast/check_record_status.sh
 
-click-left =  bash ~/.config/scripts/screencast/record.sh
+click-right = notify-send screencast "Total files to render: $(ls ~/.cache/screencast | wc -l)"
+click-left = bash ~/.config/scripts/screencast/record.sh
 
 label = %output%
 
@@ -502,25 +517,13 @@ label-foreground = ${colors.primary}
 
 [module/date]
 
-type = internal/date
+type = custom/script
 
-interval = 5
+interval = 1
 
-date  = " %Y-%m-%d"
+exec = echo "  $(date "+%Y-%m-%d %H:%m")"
 
-time = %H:%M
-
-
-format-prefix =  
-
-format-prefix-foreground = ${colors.primary}
-
-format-underline = 
-
-format-foreground = ${colors.primary}
-
-
-label = %date% %time%
+click-left = notify-send -t 300000 "     Calendar" "$(cal -m)"
 
 
 [module/pulseaudio]
