--- a/.config/compfy/compfy.conf
+++ b/.config/compfy/compfy.conf
@@ -23,6 +23,14 @@ animation-for-open-window = "zoom";
 
 animation-for-unmap-window = "zoom";
 
+animation-open-exclude = [
+	"class_g = 'jetbrains-idea'"
+];
+
+animation-unmap-exclude = [
+	"class_g = 'jetbrains-idea'"
+];
+
 
 #  $██████╗$██████╗$██████╗$███╗$$$██╗███████╗██████╗$███████╗
 #  ██╔════╝██╔═══██╗██╔══██╗████╗$$██║██╔════╝██╔══██╗██╔════╝
