#35 update screenrecord script

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -283,8 +283,7 @@ cursor-click = pointer
 #  $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
 
 
-
-width = 16%
+width = 14.5%
 
 height = 30
 
@@ -380,10 +379,10 @@ cursor-click = pointer
 
 type = custom/script
 
-exec = bash ~/.config/scripts/screencast/check_record_status.sh
+exec = bash ~/.config/scripts/screenrecord/check_status.sh
 
-click-right = notify-send screencast "Total files to render: $(ls ~/.cache/screencast | wc -l)"
-click-left = bash ~/.config/scripts/screencast/record.sh
+click-right = notify-send screenrecord "Total files in render: $(ls ~/.cache/recs | wc -l)"
+click-left = bash ~/.config/scripts/screenrecord/screenrecord.sh
 
 label = %output%
 
@@ -447,8 +446,7 @@ interval = 25
 
 mount-0 = /
 
-
-label-mounted =  HD %mountpoint% %used% of %total%
+label-mounted = " %used% of %total%"
 
 label-mounted-foreground = ${colors.primary}
 
@@ -487,16 +485,15 @@ type = internal/cpu
 
 interval = 2
 
-format-prefix = " CPU "
+#format-prefix = " CPU 
 
 format-prefix-foreground = ${colors.primary}
 
 format-underline = 
 
-label = %percentage:2%%
+label = " CPU %percentage:2%%"
 
 label-foreground = ${colors.primary}
-
 
 [module/memory]
 
@@ -521,7 +518,7 @@ type = custom/script
 
 interval = 1
 
-exec = echo "  $(date "+%Y-%m-%d %H:%m")"
+exec = echo "  $(date "+%Y-%m-%d %H:%M")"
 
 click-left = notify-send -t 300000 "     Calendar" "$(cal -m)"
 
@@ -583,8 +580,8 @@ bar-volume-empty-foreground = ${colors.foreground-alt}
 
 type = custom/text
 
-content = 
-content-padding = 1
+content = ""
+content-padding = 0
 
 click-left = rofi -no-lazy-grab -show drun -modi drun -theme ~/.config/rofi/theme.rasi -show -location 1 -xoffset 10 -yoffset 40
 click-right = rofi -no-lazy-grab -show drun -modi drun -theme ~/.config/rofi/theme.rasi -show -location 1 -xoffset 10 -yoffset 40
