--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -202,7 +202,7 @@ map F     set freeze_files!
 map <C-r> reset
 map <C-l> redraw_window
 map <C-c> abort
-map <C-x> shell -dsp geany %f
+map <C-x> shell -dsp lite-xl %f
 map <esc> change_mode normal
 map ~ set viewmode!
 
@@ -606,3 +606,4 @@ tmap <C-l> redraw_window
 tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
 
+default_linemode devicons
