--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -45,9 +45,9 @@ ext x?html?, has w3m,               terminal = w3m "$@"
 #  ╚═╝$$$$$╚═╝╚═╝╚══════╝$╚═════╝
 #  $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
 
-mime ^text,  label editor = nano -- "$@"
+mime ^text,  label editor = micro -- "$@"
 mime ^text,  label pager  = "$PAGER" -- "$@"
-!mime ^text, label editor, ext xml|json|csv|tex|py|pl|rb|js|sh|php = nano -- "$@"
+!mime ^text, label editor, ext xml|json|csv|tex|py|pl|rb|js|sh|php = micro -- "$@"
 !mime ^text, label pager,  ext xml|json|csv|tex|py|pl|rb|js|sh|php = "$PAGER" -- "$@"
 
 ext 1                         = man "$1"
