fix: minor fixes

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -12,6 +12,7 @@
 [global]
 
 radius = 10
+offset-y = 0.5%
 
 
 #  $██████╗$██████╗$██╗$$$$$$██████╗$██████╗$███████╗
@@ -67,7 +68,7 @@ width = 20%
 
 height = 30
 
-offset-y = 0.5%
+offset-y = ${global.offset-y}
 
 offset-x = 40%
 
@@ -177,7 +178,7 @@ width = 20%
 
 height = 30
 
-offset-y = 0.5%
+offset-y = ${global.offset-y}
 
 offset-x = 79.5%
 
@@ -287,7 +288,7 @@ width = 14.5%
 
 height = 30
 
-offset-y = 0.5%
+offset-y = ${global.offset-y}
 
 offset-x = 0.55%
 
