update: change wallpapers and compfy settings

--- a/.config/compfy/compfy.conf
+++ b/.config/compfy/compfy.conf
@@ -11,7 +11,7 @@
 
 animations = true;
 
-animation-stiffness = 120;
+animation-stiffness = 110;
 
 animation-window-mass = 0.3;
 
@@ -101,6 +101,7 @@ active-opacity = 1.0;
 
 opacity-rule = [
 	"70:class_g = 'Alacritty'",
+	"70:class_g = 'kitty'",
 ];
 
 
@@ -118,6 +119,8 @@ blur-background = true;
 blur-method = "dual_kawase";
 
 blur-strength = 1;
+
+blur-radius = 3;
 
 blur-whitelist = false;
 
