update: add shadows in compfy

--- a/.config/compfy/compfy.conf
+++ b/.config/compfy/compfy.conf
@@ -41,10 +41,11 @@ animation-unmap-exclude = [
 #  $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
 
 
-corner-radius = 14;
+corner-radius = 12;
 
 corners-rule = [
 	"0:class_g  = 'Polybar'",
+	"0:class_g  = 'ymjc.Main'",
 ];
 
 
@@ -57,13 +58,19 @@ corners-rule = [
 #  $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
 
 
-shadow = false;
+shadow = true;
 
-shadow-radius = 16;
+shadow-radius = 8;
 
-shadow-offset-x = -15;
+shadow-offset-x = -1;
 
-shadow-offset-y = -15;
+shadow-offset-y = -1;
+
+shadow-opacity = 0.9;
+
+shadow-exclude = [
+	"class_g  = 'Polybar'"
+]
 
 
 #  ███████╗$█████╗$██████╗$██╗███╗$$$██╗$██████╗$
