update: compfy preferences

--- a/.config/compfy/compfy.conf
+++ b/.config/compfy/compfy.conf
@@ -23,14 +23,6 @@ animation-for-open-window = "zoom";
 
 animation-for-unmap-window = "zoom";
 
-animation-open-exclude = [
-	"class_g = 'jetbrains-idea'"
-];
-
-animation-unmap-exclude = [
-	"class_g = 'jetbrains-idea'"
-];
-
 
 #  $██████╗$██████╗$██████╗$███╗$$$██╗███████╗██████╗$███████╗
 #  ██╔════╝██╔═══██╗██╔══██╗████╗$$██║██╔════╝██╔══██╗██╔════╝
@@ -69,7 +61,8 @@ shadow-offset-y = -1;
 shadow-opacity = 0.9;
 
 shadow-exclude = [
-	"class_g  = 'Polybar'"
+	"class_g  = 'Polybar'",
+	"class_g  = 'ymjc.Main'",
 ]
 
 
@@ -148,3 +141,21 @@ backend = "glx";
 vsync = false;
 
 log-level = "info";
+
+wintypes:
+{
+  dock = {shadow = false; fade = false; blur-background = false;};
+  toolbar = {shadow = false; fade = false; animation = "none"; animation-unmap = "none"; blur-background = false;};
+  menu = {shadow = false; fade = false; animation = "none"; animation-unmap = "none"; blur-background = false;};
+  utility = {shadow = false; fade = false; animation = "none"; animation-unmap = "none"; blur-background = false;};
+  splash = {shadow = false; fade = false; animation = "none"; animation-unmap = "none"; blur-background = false;};
+  dialog = {shadow = false; fade = false; animation = "none"; animation-unmap = "none"; blur-background = false;};
+# normal = {shadow = false; fade = true; animation = "none"; blur-background = false; };
+  dropdown_menu = {shadow = false; fade = false; animation = "none"; animation-unmap = "none"; blur-background = false;};
+  popup_menu = {shadow = false; fade = false; animation = "none"; animation-unmap = "none"; blur-background = false;};
+  tooltip = {shadow = false; fade = false; animation = "none"; animation-unmap = "none"; blur-background = false;};
+  notification = {shadow = false; fade = false; animation = "none"; animation-unmap = "none"; blur-background = false;};
+  combo = {shadow = false; fade = false; animation = "none"; animation-unmap = "none"; blur-background = false;};
+  dnd = {shadow = false; fade = false;animation = "none"; animation-unmap = "none"; blur-background = false;};
+}
+
