update: major "setup.sh" code refactoring

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -84,7 +84,7 @@ bottom = false
 #  $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
 
 
-font-0 = scientifica:style=Regular:size=10:antialias=true;2"
+font-0 = "scientifica:style=Regular:size=8:antialias=true;2"
 
 font-1 = "Font Awesome 6 Free:style=Solid:pixelsize=8;2"
 
@@ -194,7 +194,7 @@ bottom = false
 #  $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
 
 
-font-0 = scientifica:style=Regular:size=10:antialias=true;2"
+font-0 = "scientifica:style=Regular:size=8:antialias=true;2"
 
 font-1 = "Font Awesome 6 Free:style=Solid:pixelsize=8;2"
 
@@ -246,9 +246,9 @@ padding-right = 2
 
 module-margin-left = 1
 
-module-margin-right = 1
+module-margin-right = 0
 
-modules-left = 
+modules-left =
 
 modules-center = screenrecord xworkspaces network pulseaudio xkeyboard date
 
@@ -304,13 +304,14 @@ bottom = false
 #  $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
 
 
-font-0 = scientifica:style=Regular:size=10:antialias=true;2"
+font-0 = "scientifica:style=Regular:size=8:antialias=true;2"
 
 font-1 = "Font Awesome 6 Free:style=Solid:pixelsize=10;3"
 
 font-2 = "Font Awesome 6 Free:style=Regular:pixelsize=10;2"
 
 font-3 = "Font Awesome 6 Brands:pixelsize=10;2"
+
 
 #  $██████╗$██████╗$██╗$$$$$$██████╗$██████╗$███████╗
 #  ██╔════╝██╔═══██╗██║$$$$$██╔═══██╗██╔══██╗██╔════╝
@@ -519,7 +520,7 @@ type = custom/script
 
 interval = 1
 
-exec = echo "  $(date "+%Y-%m-%d %H:%M")"
+exec = echo "   $(date "+%Y-%m-%d %H:%M")"
 
 click-left = notify-send -t 300000 "     Calendar" "$(cal -m)"
 
