update: minor updates

--- a/.config/compfy/compfy.conf
+++ b/.config/compfy/compfy.conf
@@ -37,7 +37,6 @@ corner-radius = 12;
 
 corners-rule = [
 	"0:class_g  = 'Polybar'",
-	"0:class_g  = 'ymjc.Main'",
 ];
 
 
@@ -62,7 +61,6 @@ shadow-opacity = 0.9;
 
 shadow-exclude = [
 	"class_g  = 'Polybar'",
-	"class_g  = 'ymjc.Main'",
 ]
 
 
@@ -122,7 +120,12 @@ blur-strength = 1;
 
 blur-radius = 3;
 
-blur-whitelist = false;
+blur-whitelist = true;
+
+blur-include = [
+  "class_g = 'Polybar'",
+  "class_g = 'Alacritty'",
+];
 
 
 #  $██████╗$███████╗███╗$$$██╗███████╗██████╗$$█████╗$██╗$$$$$
@@ -150,7 +153,7 @@ wintypes:
   utility = {shadow = false; fade = false; animation = "none"; animation-unmap = "none"; blur-background = false;};
   splash = {shadow = false; fade = false; animation = "none"; animation-unmap = "none"; blur-background = false;};
   dialog = {shadow = false; fade = false; animation = "none"; animation-unmap = "none"; blur-background = false;};
-# normal = {shadow = false; fade = true; animation = "none"; blur-background = false; };
+#  normal = {shadow = false; fade = true; animation = "none"; blur-background = false; };
   dropdown_menu = {shadow = false; fade = false; animation = "none"; animation-unmap = "none"; blur-background = false;};
   popup_menu = {shadow = false; fade = false; animation = "none"; animation-unmap = "none"; blur-background = false;};
   tooltip = {shadow = false; fade = false; animation = "none"; animation-unmap = "none"; blur-background = false;};
