update: added JDK to installable packages. Code refactoring "setup.sh"

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -84,7 +84,7 @@ bottom = false
 #  $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
 
 
-font-0 = "scientifica:style=Regular:size=8:antialias=true;2"
+font-0 = "scientifica:pixelsize=8:antialias=true;2"
 
 font-1 = "Font Awesome 6 Free:style=Solid:pixelsize=8;2"
 
@@ -194,7 +194,7 @@ bottom = false
 #  $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
 
 
-font-0 = "scientifica:style=Regular:size=8:antialias=true;2"
+font-0 = "scientifica:pixelsize=8:antialias=true;2"
 
 font-1 = "Font Awesome 6 Free:style=Solid:pixelsize=8;2"
 
@@ -246,7 +246,7 @@ padding-right = 2
 
 module-margin-left = 1
 
-module-margin-right = 0
+module-margin-right = 1
 
 modules-left =
 
@@ -304,7 +304,7 @@ bottom = false
 #  $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
 
 
-font-0 = "scientifica:style=Regular:size=8:antialias=true;2"
+font-0 = "scientifica:pixelsize=8:antialias=true;2"
 
 font-1 = "Font Awesome 6 Free:style=Solid:pixelsize=10;3"
 
