update: code refactoring

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -240,9 +240,9 @@ radius = ${global.radius}
 
 fixed-center = true
 
-padding-left = 2
+padding-left = 0
 
-padding-right = 2
+padding-right = 0
 
 module-margin-left = 1
 
@@ -252,7 +252,7 @@ modules-left =
 
 modules-center = screenrecord xworkspaces network pulseaudio xkeyboard date
 
-modules-right = 
+modules-right =
 
 tray-position = hidden
 
@@ -377,6 +377,7 @@ cursor-click = pointer
 #  ╚═╝$$$$$╚═╝$╚═════╝$╚═════╝$$╚═════╝$╚══════╝╚══════╝╚══════╝
 #  $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
 
+
 [module/screenrecord]
 
 type = custom/script
@@ -386,9 +387,10 @@ exec = bash ~/.config/scripts/screenrecord/check_status.sh
 click-right = notify-send screenrecord "Total files in render: $(ls ~/.cache/recs | wc -l)"
 click-left = bash ~/.config/scripts/screenrecord/screenrecord.sh
 
-label = %output%
+label = "%output%"
 
 interval = 1
+
 
 [module/xwindow]
 
@@ -458,6 +460,7 @@ label-unmounted-foreground = ${colors.primary}
 
 
 [module/xworkspaces]
+
 type = internal/xworkspaces
 
 pin-workspaces = true
@@ -497,6 +500,7 @@ label = " CPU %percentage:2%%"
 
 label-foreground = ${colors.primary}
 
+
 [module/memory]
 
 type = internal/memory
@@ -529,7 +533,6 @@ click-left = notify-send -t 300000 "     Calendar" "$(cal -m)"
 
 type = internal/pulseaudio
 
-
 format-volume =   <label-volume> <bar-volume>
 
 format-volume-foreground = ${colors.primary}
@@ -537,7 +540,6 @@ format-volume-foreground = ${colors.primary}
 label-volume = %percentage%%
 
 label-volume-foreground = ${colors.primary}
-
 
 label-muted = "     muted      "
 
