--- a/home/.config/scripts/theme-switcher/themes/light/config.ini
+++ b/home/.config/scripts/theme-switcher/themes/light/config.ini
@@ -26,19 +26,19 @@ offset-y = 0.5%
 
 [colors]
 
-background = #80000000
+background = #d4e1e5
 
-background-alt = #80000000
+background-alt = #d4e1e5
 
-foreground = #dfdfdf
+foreground = #2e2e2e
 
-foreground-alt = #dfdfdf
+foreground-alt = #2e2e2e
 
-primary = #dfdfdf
+primary = #2e2e2e
 
-secondary = #dd3300
+secondary = #ff0000
 
-alert = #dd3300
+alert = #ff0000
 
 
 #  ████████╗$██████╗$██████╗$$$$$$██████╗███████╗███╗$$$██╗████████╗███████╗██████╗$
