update: Added graphite-gtk-theme instead of plata-theme. Updated all related files in theme-switcher/themes.

--- a/home/.config/alacritty/alacritty.toml
+++ b/home/.config/alacritty/alacritty.toml
@@ -1,85 +1,1 @@
-
-
-#  $██████╗$██████╗$██╗$$$$$$██████╗$██████╗$███████╗
-#  ██╔════╝██╔═══██╗██║$$$$$██╔═══██╗██╔══██╗██╔════╝
-#  ██║$$$$$██║$$$██║██║$$$$$██║$$$██║██████╔╝███████╗
-#  ██║$$$$$██║$$$██║██║$$$$$██║$$$██║██╔══██╗╚════██║
-#  ╚██████╗╚██████╔╝███████╗╚██████╔╝██║$$██║███████║
-#  $╚═════╝$╚═════╝$╚══════╝$╚═════╝$╚═╝$$╚═╝╚══════╝
-#  $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
-
-
-[colors.bright]
-black = "#717a80"
-blue = "#b8e3ff"
-cyan = "#a1f8ef"
-green = "#b9ffc4"
-magenta = "#ffaad2"
-red = "#e67e80"
-white = "#f0f0f0"
-yellow = "#ffd88a"
-
-[colors.normal]
-black = "#717a80"
-blue = "#b8e3ff"
-cyan = "#a1f8ef"
-green = "#b9ffc4"
-magenta = "#ffaad2"
-red = "#e67e80"
-white = "#f0f0f0"
-yellow = "#ffd88a"
-
-[colors.primary]
-background = "#0e0e0e"
-foreground = "#f2f2f2"
-
-
-#  $██████╗$██████╗$███╗$$$██╗███████╗██╗$██████╗$
-#  ██╔════╝██╔═══██╗████╗$$██║██╔════╝██║██╔════╝$
-#  ██║$$$$$██║$$$██║██╔██╗$██║█████╗$$██║██║$$███╗
-#  ██║$$$$$██║$$$██║██║╚██╗██║██╔══╝$$██║██║$$$██║
-#  ╚██████╗╚██████╔╝██║$╚████║██║$$$$$██║╚██████╔╝
-#  $╚═════╝$╚═════╝$╚═╝$$╚═══╝╚═╝$$$$$╚═╝$╚═════╝$
-#  $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
-
-
-[env]
-TERM = "xterm-256color"
-
-[font]
-size = 13.0
-
-[font.bold]
-family = "JetBrains Mono"
-style = "Regular"
-
-[font.bold_italic]
-family = "JetBrains Mono"
-style = "Italic"
-
-[font.italic]
-family = "JetBrains Mono"
-style = "Italic"
-
-[font.normal]
-family = "JetBrains Mono"
-style = "Light"
-
-[font.offset]
-x = 0
-y = 1
-
-[scrolling]
-history = 5000
-
-[window]
-opacity = 1.0
-title = "Alacritty"
-
-[window.class]
-general = "Alacritty"
-instance = "Alacritty"
-
-[window.padding]
-x = 14
-y = 12
+/home/madnessday666/dots/home/.config/scripts/theme-switcher/themes/light/alacritty.toml
