--- a/home/.config/compfy/compfy.conf
+++ b/home/.config/compfy/compfy.conf
@@ -30,8 +30,8 @@ animation-for-unmap-window = "zoom";
 #  ██║$$$$$██║$$$██║██╔══██╗██║╚██╗██║██╔══╝$$██╔══██╗╚════██║
 #  ╚██████╗╚██████╔╝██║$$██║██║$╚████║███████╗██║$$██║███████║
 #  $╚═════╝$╚═════╝$╚═╝$$╚═╝╚═╝$$╚═══╝╚══════╝╚═╝$$╚═╝╚══════╝
-#  $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
 
+#  $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
 
 corner-radius = 12;
 
@@ -49,7 +49,7 @@ corners-rule = [
 #  $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
 
 
-shadow = true;
+shadow = false;
 
 shadow-radius = 8;
 
@@ -57,10 +57,11 @@ shadow-offset-x = -1;
 
 shadow-offset-y = -1;
 
-shadow-opacity = 0.9;
+shadow-opacity = 0.7;
 
 shadow-exclude = [
 	"class_g  = 'Polybar'",
+	"class_g  = 'Rofi'",
 ]
 
 
@@ -84,9 +85,9 @@ fade-out-step = 0.03;
 #  ██╔═══██╗██╔══██╗██╔══██╗██╔════╝██║╚══██╔══╝╚██╗$██╔╝
 #  ██║$$$██║██████╔╝███████║██║$$$$$██║$$$██║$$$$╚████╔╝$
 #  ██║$$$██║██╔═══╝$██╔══██║██║$$$$$██║$$$██║$$$$$╚██╔╝$$
-#  ╚██████╔╝██║$$$$$██║$$██║╚██████╗██║$$$██║$$$$$$██║$$$
 #  $╚═════╝$╚═╝$$$$$╚═╝$$╚═╝$╚═════╝╚═╝$$$╚═╝$$$$$$╚═╝$$$
 #  $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
+#  ╚██████╔╝██║$$$$$██║$$██║╚██████╗██║$$$██║$$$$$$██║$$$
 
 
 inactive-opacity = 1.0;
@@ -98,8 +99,9 @@ inactive-opacity-override = false;
 active-opacity = 1.0;
 
 opacity-rule = [
-	"70:class_g = 'Alacritty'",
-	"80:class_g = 'Rofi'",
+	"90:class_g = 'Alacritty'",
+	"90:class_g = 'Polybar'",
+	"90:class_g = 'Rofi'",
 ];
 
 
@@ -156,8 +158,8 @@ wintypes:
 #  normal = {shadow = false; fade = true; animation = "none"; blur-background = false; };
   dropdown_menu = {shadow = false; fade = false; animation = "none"; animation-unmap = "none"; blur-background = false;};
   popup_menu = {shadow = false; fade = false; animation = "none"; animation-unmap = "none"; blur-background = false;};
-  tooltip = {shadow = false; fade = false; animation = "none"; animation-unmap = "none"; blur-background = false;};
-  notification = {shadow = false; fade = false; animation = "none"; animation-unmap = "none"; blur-background = false;};
+  tooltip = {shadow = false; fade = false; animation = "none"; animation-unmap = "none"; blur-background = false; };
+  notification = {shadow = false; fade = false; animation = "none"; animation-unmap = "none"; blur-background = false; opacity = false;};
   combo = {shadow = false; fade = false; animation = "none"; animation-unmap = "none"; blur-background = false;};
   dnd = {shadow = false; fade = false;animation = "none"; animation-unmap = "none"; blur-background = false;};
 }
