--- a/home/.config/scripts/theme-switcher/themes/light/alacritty.toml
+++ b/home/.config/scripts/theme-switcher/themes/light/alacritty.toml
@@ -30,8 +30,8 @@ white = "#cccccc"
 yellow = "#cc8800"
 
 [colors.primary]
-background = "#f2f2f2"
-foreground = "#0e0e0e"
+background = "#e0e0e0"
+foreground = "#2c2c2c"
 
 
 #  $██████╗$██████╗$███╗$$$██╗███████╗██╗$██████╗$
