--- a/home/.config/scripts/theme-switcher/themes/dark/alacritty.toml
+++ b/home/.config/scripts/theme-switcher/themes/dark/alacritty.toml
@@ -30,8 +30,8 @@ white = "#f0f0f0"
 yellow = "#ffd88a"
 
 [colors.primary]
-background = "#0e0e0e"
-foreground = "#f2f2f2"
+background = "#2c2c2c"
+foreground = "#e0e0e0"
 
 
 #  $██████╗$██████╗$███╗$$$██╗███████╗██╗$██████╗$
