--- a/home/.config/scripts/theme-switcher/themes/light/config.ini
+++ b/home/.config/scripts/theme-switcher/themes/light/config.ini
@@ -26,15 +26,15 @@ offset-y = 0.5%
 
 [colors]
 
-background = #d4e1e5
+background = #e0e0e0
 
-background-alt = #d4e1e5
+background-alt = #e0e0e0
 
-foreground = #2e2e2e
+foreground = #2c2c2c
 
-foreground-alt = #2e2e2e
+foreground-alt = #2c2c2c
 
-primary = #2e2e2e
+primary = #2c2c2c
 
 secondary = #ff0000
 
@@ -457,7 +457,6 @@ type = internal/fs
 
 interval = 25
 
-
 mount-0 = /
 
 label-mounted = " %used% of %total%"
@@ -563,20 +562,6 @@ bar-volume-format = %fill%%empty%
 
 bar-volume-width = 10
 
-bar-volume-foreground-0 = #00cc1f
-
-bar-volume-foreground-1 = #00cc1f
-
-bar-volume-foreground-2 = #00cc1f
-
-bar-volume-foreground-3 = #00cc1f
-
-bar-volume-foreground-4 = #ff8c1a
-
-bar-volume-foreground-5 = #ff8c1a
-
-bar-volume-foreground-6 = #ff0000
-
 bar-volume-gradient = false
 
 bar-volume-indicator = 
@@ -591,7 +576,7 @@ bar-volume-empty = ―
 
 bar-volume-empty-font = 3
 
-bar-volume-empty-foreground = ${colors.foreground-alt}
+bar-volume-empty-foreground = #a2a2a2
 
 
 [module/apps]
