update: global file rearrangement, color scheme corrections, added rofi-powermenu

--- a/home/.config/polybar/config.ini
+++ b/home/.config/polybar/config.ini
@@ -1,1 +1,15 @@
-/home/madnessday666/dots/home/.config/scripts/theme-switcher/themes/dark/config.ini
+#  $██████╗$██████╗$███╗$$$██╗███████╗██╗$██████╗$
+#  ██╔════╝██╔═══██╗████╗$$██║██╔════╝██║██╔════╝$
+#  ██║$$$$$██║$$$██║██╔██╗$██║█████╗$$██║██║$$███╗
+#  ██║$$$$$██║$$$██║██║╚██╗██║██╔══╝$$██║██║$$$██║
+#  ╚██████╗╚██████╔╝██║$╚████║██║$$$$$██║╚██████╔╝
+#  $╚═════╝$╚═════╝$╚═╝$$╚═══╝╚═╝$$$$$╚═╝$╚═════╝$
+#  $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
+
+
+include-file = colors.ini
+include-file = global.ini
+include-file = modules.ini
+include-file = top-center.ini
+include-file = top-left.ini
+include-file = top-right.ini
