fix: fixed "Too many levels of symbolic links"
Signed-off-by: madnessday666 <madnessday666@gmail.com>

--- a/home/.config/polybar/colors.ini
+++ b/home/.config/polybar/colors.ini
@@ -1,1 +1,18 @@
-/home/madnessday666/dots/home/.config/scripts/theme-switcher/themes/dark/colors.ini
+#  $██████╗$██████╗$██╗$$$$$$██████╗$██████╗$███████╗
+#  ██╔════╝██╔═══██╗██║$$$$$██╔═══██╗██╔══██╗██╔════╝
+#  ██║$$$$$██║$$$██║██║$$$$$██║$$$██║██████╔╝███████╗
+#  ██║$$$$$██║$$$██║██║$$$$$██║$$$██║██╔══██╗╚════██║
+#  ╚██████╗╚██████╔╝███████╗╚██████╔╝██║$$██║███████║
+#  $╚═════╝$╚═════╝$╚══════╝$╚═════╝$╚═╝$$╚═╝╚══════╝
+#  $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
+
+
+[colors]
+
+background = #2c2c2c
+background-alt = #2c2c2c
+foreground = #e0e0e0
+foreground-alt = #606060
+primary = #e0e0e0
+secondary = #dd3300
+alert = #dd3300
