--- a/home/.config/gtk-3.0/settings.ini
+++ b/home/.config/gtk-3.0/settings.ini
@@ -1,1 +1,17 @@
-/home/madnessday666/dots/home/.config/scripts/theme-switcher/themes/dark/settings.ini
+[Settings]
+gtk-theme-name=Graphite-Dark
+gtk-application-prefer-dark-theme=1
+gtk-icon-theme-name=Adwaita
+gtk-font-name=Sans 10
+gtk-cursor-theme-size=0
+gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
+gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
+gtk-button-images=0
+gtk-menu-images=0
+gtk-enable-event-sounds=1
+gtk-enable-input-feedback-sounds=1
+gtk-xft-antialias=1
+gtk-xft-hinting=1
+gtk-xft-hintstyle=hintslight
+gtk-xft-rgba=rgb
+gtk-cursor-theme-name=Breeze_Obsidian
