update: added lightdm-mini-greeter instead of lightdm-gtk3-greeter

--- a/dm/lightdm.conf
+++ b/dm/lightdm.conf
@@ -86,6 +86,7 @@
 [Seat:*]
 greeter-setup-script=/usr/bin/numlockx on
 session-wrapper=/etc/lightdm/Xsession
+greeter-session=lightdm-mini-greeter
 #type=local
 #pam-service=lightdm
 #pam-autologin-service=lightdm-autologin
@@ -101,7 +102,6 @@ session-wrapper=/etc/lightdm/Xsession
 #xdmcp-manager=
 #xdmcp-port=177
 #xdmcp-key=
-#greeter-session=example-gtk-gnome
 #greeter-hide-users=false
 #greeter-allow-guest=true
 #greeter-show-manual-login=false
