update: added custom mic module to polybar

--- a/home/.config/polybar/modules.ini
+++ b/home/.config/polybar/modules.ini
@@ -57,6 +57,18 @@ label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.primary}
 
 
+[module/mic]
+
+type = custom/script
+
+tail = true
+
+exec = bash ~/.config/scripts/polybar-modules/module_mic.sh
+
+click-left = pactl set-source-mute @DEFAULT_SOURCE@ toggle
+click-right = pavucontrol -t 4
+
+
 [module/memory]
 
 type = internal/memory
