--- a/home/.config/polybar/top-right.ini
+++ b/home/.config/polybar/top-right.ini
@@ -20,10 +20,10 @@
 
 
 override-redirect = true
-width = 19.5%
+width = 20.5%
 height = ${global.height}
 offset-y = ${global.offset-y}
-offset-x = 80%
+offset-x = 79%
 bottom = false
 
 
@@ -76,7 +76,7 @@ padding-right = 0
 module-margin-left = 1
 module-margin-right = 1
 modules-left =
-modules-center = xworkspaces network pulseaudio xkeyboard date powermenu
+modules-center = xworkspaces network mic pulseaudio xkeyboard date powermenu
 modules-right =
 wm-restack = bspwm
 cursor-click = pointer
