update: added bluez & blueman to installable packages list, added bluetooth module to polybar
Signed-off-by: madnessday666 <madnessday666@gmail.com>

--- a/home/.config/polybar/modules.ini
+++ b/home/.config/polybar/modules.ini
@@ -17,6 +17,15 @@ content-padding = 0
 click-left = rofi -no-lazy-grab -show drun -modi drun -theme ~/.config/rofi/theme.rasi -show -location 1 -xoffset 10 -yoffset 40
 click-right = rofi -no-lazy-grab -show drun -modi drun -theme ~/.config/rofi/theme.rasi -show -location 1 -xoffset 10 -yoffset 40
 
+[module/bluetooth]
+type = custom/script
+
+tail = true
+
+exec = bash ~/.config/scripts/polybar-modules/bluetooth/bluetooth_status.sh
+
+click-left = blueman-manager 
+click-right = blueman-manager
 
 [module/cpu]
 
@@ -63,7 +72,7 @@ type = custom/script
 
 tail = true
 
-exec = bash ~/.config/scripts/polybar-modules/module_mic.sh
+exec = bash ~/.config/scripts/polybar-modules/mic/mic_status.sh
 
 click-left = pactl set-source-mute @DEFAULT_SOURCE@ toggle
 click-right = pavucontrol -t 4
